# atomvoxelizer

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CHANGELOG  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
benchmarks/: benchmark_backends.py  benchmark_dtypes.py  benchmark_structures.py
docs/source/: algorithm.rst  analysis.rst  api.rst  backends.rst  citation.rst  concepts.rst  conf.py  contributing.rst  examples.rst  fieldgrids.rst  index.rst  install.rst  probe_pore_volume.rst  publishing.rst  quickstart.rst  usage.rst
docs/source/_static/: custom.css
examples/: zeolite_analysis.py
examples/fieldgrids/: normal_mask_visual.py
examples/mc/: orb_v3_co_mcmd.py  orb_v3_wulff_mc.py  orb_v3_wulff_mc.traj
examples/mcmd/: orb_v3_wulff_mc.py
examples/surfaces/: pt211_distance_surface.py
examples/wulff/: distance_surface.py
examples/zeolite/: BEA.cif  zeolite_analysis.py  zeolite_slice_visual.py  zeolite_voxel.py
src/atomvoxelizer/: __init__.py  analysis.py  cupy_backend.py  numba_backend.py  numba_field_backend.py  taichi_backend.py  vectorgrid.py  voxelgrid.py
tests/: test_analysis.py  test_backends.py  test_distance_masks.py  test_imports.py  test_mc_example.py  test_mcmd_example.py  test_numba_backend.py  test_vectorgrid.py  test_voxelgrid_numpy.py  test_zeolite_analysis_example.py
