[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AtomVoxelizer"
version = "0.2.6"
description = "Periodic atom-centered voxel grids for atomistic structures."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "AtomVoxelizer contributors" },
]
dependencies = [
    "matplotlib",
    "numpy",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
analysis = [
    "scikit-image",
]
examples = [
    "ase",
    "requests",
]
docs = [
    "sphinx",
]
dev = [
    "ase",
    "pytest",
    "requests",
    "scikit-image",
    "sphinx",
]
bench = [
    "ase",
]
publish = [
    "build",
    "twine",
]

[project.urls]
Homepage = "https://gitlab.com/tgmaxson/atomvoxelizer"
Documentation = "https://atomvoxelizer.readthedocs.io/"
Repository = "https://gitlab.com/tgmaxson/atomvoxelizer"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
